src/test/deca/context/valid/non_provided/conv_float_declvar.deca
// Description:
//    Conversion d'un int en float lors d'une 
//    déclaration avec initialisation
//
// Resultats:
//    
// 
// Historique:
//    cree le 14/01/2020

{
    float a = 6;
}